--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "ariaieboy/filament-currency": "^1.8",
         "filament/filament": "3.2",
         "guzzlehttp/guzzle": "^7.2",
+        "joaopaulolndev/filament-edit-profile": "^1.0",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
