--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
+        "leandrocfe/filament-apex-charts": "^3.1",
         "psr/simple-cache": "^2.0",
         "pxlrbt/filament-excel": "^2.3",
         "spatie/laravel-permission": "^6.9"
