--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^8.3",
         "ariaieboy/filament-currency": "^1.8",
+        "filament/actions": "^3.2",
         "filament/filament": "3.2",
         "guzzlehttp/guzzle": "^7.2",
         "joaopaulolndev/filament-edit-profile": "^1.0",
