feat: change total allocations chart heading, delete top ten charts, fix dark overlay

--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "leandrocfe/filament-apex-charts": "^3.1",
         "psr/simple-cache": "^2.0",
         "pxlrbt/filament-excel": "^2.3",
-        "spatie/laravel-permission": "^6.9"
+        "spatie/laravel-permission": "^6.9",
+        "livewire/livewire": "3.5.12"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.13",
@@ -30,7 +31,8 @@
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^7.0",
         "phpunit/phpunit": "^10.1",
-        "spatie/laravel-ignition": "^2.0"
+        "spatie/laravel-ignition": "^2.0",
+        "livewire/livewire": "3.5.12"
     },
     "autoload": {
         "psr-4": {
