--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "leandrocfe/filament-apex-charts": "^3.1",
         "psr/simple-cache": "^2.0",
         "pxlrbt/filament-excel": "^2.3",
+          "livewire/livewire": "3.5.12",
         "spatie/laravel-permission": "^6.10"
     },
     "require-dev": {
