--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,8 @@
         "filament/tables": "3.2.123",
         "guzzlehttp/guzzle": "^7.2",
         "joaopaulolndev/filament-edit-profile": "^1.0",
-        "laravel/framework": "^10.10",
-        "laravel/sanctum": "^3.3",
+        "laravel/framework": "11.44.1",
+        "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.8",
         "leandrocfe/filament-apex-charts": "^3.1",
         "livewire/livewire": "3.5.6",
@@ -32,7 +32,7 @@
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
         "mockery/mockery": "^1.4.4",
-        "nunomaduro/collision": "^7.0",
+        
         "phpunit/phpunit": "^10.1",
         "spatie/laravel-ignition": "^2.0"
     },
