--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "livewire/livewire": "3.5.6",
         "psr/simple-cache": "^2.0",
         "pxlrbt/filament-excel": "^2.3",
+        "spatie/laravel-activitylog": "^4.10",
         "spatie/laravel-permission": "^6.12"
     },
     "require-dev": {
